# FastApi_API_template

./: main.py  pyproject.toml
