[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Marco A. Gallegos <ma_galeza@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
fastapi = "^0.75.1"
bson = "^0.5.10"
pymongo = "^4.0.2"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"